<resources>
    <string name="app_name">Encore</string>
    <string name="search_hint">Search music</string>
    <string name="title_section_listen_now">Listen now</string>
    <string name="title_section_my_songs">My songs</string>
    <string name="title_section_playlists">Playlists</string>
    <string name="title_section_automix">Automix</string>
    <string name="title_section_recognition">Recognition</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="play_now">Play now</string>
    <string name="recently_listened_to">You recently listened to…</string>
    <string name="settings">Settings</string>
    <string name="cast">Cast</string>
    <string name="placeholder_search">Search your music…</string>
    <plurals name="nb_tracks">
        <item quantity="one">%d track</item>
        <item quantity="other">%d tracks</item>
        <item quantity="zero">No tracks</item>
    </plurals>
    <string name="no_settings_provider">This provider has no settings.</string>
    <string name="no_settings_dsp">This sound effect has no settings.</string>
    <string name="all_dsp_in_use">All effects are already in the chain.</string>
    <string name="plugin_error">Plugin error, contact the developer. Developer, check log.</string>
    <string name="title_activity_artist">Artist</string>
    <string name="hello_world">Hello world!</string>
    <string name="from_the_album">From \"%s\"</string>
    <string name="loading">Loading…</string>
    <string name="recommended_for_you">Recommended for you</string>
    <string name="albums">Albums</string>
    <string name="please_program_me">I am a lonely button waiting to be programmed</string>
    <string name="add_to_queue">Add to queue</string>
    <string name="more_from">More from %s</string>
    <string name="hide_from_library">Hide from library</string>
    <string name="add_album_to_queue">Add album to queue</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="view_full_queue">View full queue…</string>
    <string name="title_activity_playback_queue">Now playing</string>
    <string name="title_activity_settings">Settings</string>
    <string name="add_effect">Add effect</string>
    <string name="cancel">Cancel</string>
    <string name="new_playlist">New playlist…</string>
    <string name="add_to">Add to…</string>
    <string name="create">Create</string>
    <string name="multi_provider_playlist">Multi-provider playlist (local only)</string>
    <string name="enter_name">Enter a name</string>
    <string name="start_recognition">Start recognition</string>
    <string name="recognizing">Recognizing…</string>
    <string name="open_album">Show album</string>
    <string name="start_radio">Start radio</string>
    <string name="back_button_label">Back</string>
    <string name="next_button_label">Next</string>
    <string name="skip_button_label">Skip</string>
    <string name="raise">Raise</string>
    <string name="lower">Lower</string>
    <string name="remove">Remove</string>
    <string name="tab_all_songs">All Songs</string>
    <string name="tab_artists">Artists</string>
    <string name="tab_albums">Albums</string>
    <string name="tab_playlists">Playlists</string>
    <string name="options">Options</string>
    <string name="title_activity_automix">Automix</string>
    <string name="tracks">Tracks</string>
    <string name="biography">Biography</string>
    <string name="Similar">Similar</string>
    <string name="more_on_the_web">More on the web</string>
    <string name="unable_fetch_artist_info">Unable to get artist information.</string>
    <string name="biography_format">%1$s\n\nSource:\n%2$s (%3$s)\n%4$s - %5$s</string>
    <string name="no_bio_available">No biography available.</string>
    <string name="plugins">Plug-ins</string>
    <string name="automix">Automix</string>
    <string name="general">General</string>
    <string name="other">Other</string>
    <string name="settings_provider_config_summary">Configure the installed music providers plug-ins.</string>
    <string name="settings_provider_config_title">Music providers</string>
    <string name="settings_dsp_config_summary">Enable, disable, and configure the installed sound effect plug-ins to use in your effects chain.</string>
    <string name="settings_dsp_config_title">Sound effects</string>
    <string name="settings_taste_learning_summary">Send anonymous information to help better determine songs I\'m likely to like.</string>
    <string name="settings_taste_learning_title">Learn my taste</string>
    <string name="settings_album_art_summary">Beautify the navigation by downloading appropriate album art.</string>
    <string name="settings_album_art_title">Download album art</string>
    <string name="settings_wifi_stream_only_summary">Automatically enable offline mode when leaving Wi-Fi network.</string>
    <string name="settings_wifi_stream_only_title">Wi-Fi streaming only</string>
    <string name="settings_licenses_summary">Open Source and Third-Party Licenses</string>
    <string name="settings_licenses_title">Licenses</string>
    <string name="settings_list_entry_ignored">Ignored (any)</string>
    <string name="settings_list_entry_low_default">Low (default)</string>
    <string name="settings_list_entry_low">Low</string>
    <string name="settings_list_entry_medium">Medium</string>
    <string name="settings_list_entry_high">High</string>
    <string name="title_activity_automix_create_static">Create static playlist</string>
    <string name="title_activity_automix_create_dynamic">Create dynamic bucket</string>
    <string name="bucket_track_failure">Unable to find a suitable track for this bucket.</string>
    <string name="bucket_settings_invalid">These settings couldn\'t generate a valid bucket, or a network error occurred.</string>
    <string name="automix_minimal_settings_error">Choose at least a style or mood, or enable taste profile.</string>
    <string name="bucket_creating_dialog">Creating bucket (this may take a few seconds)…</string>
    <string name="playlist_creating_dialog">Creating automix playlist (this may take a few seconds)…</string>
    <string name="automix_bucket_name_error">Please enter a name for this bucket.</string>
    <string name="bucket_history">History</string>
    <string name="bucket_edit">Edit</string>
    <string name="empty_playback_queue">Nothing is currently playing</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="play">Play</string>
    <string name="next">Next</string>
    <string name="automix_styles_summary">Select the styles to include in this bucket (select none to include all).</string>
    <string name="automix_styles_title">Styles</string>
    <string name="automix_moods_summary">Select the moods to include in this bucket (select none to include all).</string>
    <string name="automix_moods_title">Moods</string>
    <string name="automix_use_taste_summary">Use your learned taste to bias the tracks generation to your liking.</string>
    <string name="automix_use_taste_title">Use my taste profile</string>
    <string name="automix_adventure_summary">A low level means only known and preferred music will be played. A high level means mostly unknown music will be played.</string>
    <string name="automix_adventure_title">Adventurousness level</string>
    <string name="automix_song_types_summary">Types of song (select none to use default)</string>
    <string name="automix_song_types_title">Song types</string>
    <string name="automix_speechiness_summary">Target amount of speech.</string>
    <string name="automix_speechiness_title">Speechiness</string>
    <string name="automix_energy_summary">Target level of energy</string>
    <string name="automix_energy_title">Energy</string>
    <string name="automix_familiarity_summary">Target level of tracks familiarity.</string>
    <string name="automix_familiarity_title">Familiarity</string>
    <string name="automix_category_knobs">Knobs</string>
    <string name="automix_category_genre">Genre</string>
    <string name="automix_bucket_name">Bucket name</string>
    <string name="cannot_login">Cannot login to %s, check credentials.</string>
    <string name="automix_create">Create</string>
    <string name="sound_effects">Sound effects</string>
    <string name="offline_mode">Offline mode</string>
    <string name="offline">Offline</string>
    <string name="downloading">Sync…</string>
    <string name="feedback">Feedback</string>
    <plurals name="songs_count">
        <item quantity="zero">No songs</item>
        <item quantity="one">One song</item>
        <item quantity="other">%d songs</item>
    </plurals>
    <plurals name="albums_count">
        <item quantity="zero">No albums</item>
        <item quantity="one">One album</item>
        <item quantity="other">%d albums</item>
    </plurals>
    <string name="no_music_hint">You don\'t have any music. Configure a provider in the Settings, or copy music on your device via USB!</string>
    <string name="recognition_howto">Point your device at a speaker, or sing a song, and press the button below. Once you\'re done, or after a few seconds, tap it again to recognize what song that was.</string>
    <string name="recognition_failed">Oops, we couldn\'t recognize what we heard!</string>
    <string name="more">More</string>
    <string name="songs">Songs</string>
    <plurals name="xx_songs">
        <item quantity="one">%d song</item>
        <item quantity="zero">%d songs</item>
        <item quantity="other">%d songs</item>
    </plurals>
    <string name="plugin_not_configured_snackbar">Plugin \'%s\' not configured.</string>
    <string name="configure">Configure</string>
    <string name="pref_clear_caches_summary">This will clear albums art, but not any cached music.</string>
    <string name="menu_remove_duplicates">Remove duplicates</string>
    <string name="welcome_step1_title">Welcome to Encore!</string>
    <string name="welcome_step1_body">Get ready for a new way of listening to music on the go! Encore brings all of your music, online and local, to one open-source app.</string>
    <string name="welcome_step2_title">Got your sources?</string>
    <string name="welcome_step2_body">Music is played from your local device as well as from your favorite online services via plug-ins. Browse and install the ones you want!</string>
    <string name="browse">Browse</string>
    <string name="welcome_step3_body">You may configure your account and other settings for the following plugins:</string>
    <string name="welcome_step3_title">Configure your plugins</string>
    <string name="welcome_step4_title">You\'re all set!</string>
    <string name="welcome_finish">Let\'s rock!</string>
    <string name="play_next">Play next</string>
    <string name="remove_playlist">Remove playlist</string>
    <string name="rename_playlist">Rename playlist</string>
    <string name="add_to_another_playlist">Add to another playlist</string>
    <string name="welcome_featurette_title">Don\'t miss out:</string>
    <string name="welcome_featurette_effects"><b>Audio effects:</b> Enhance your audio quality with equalizers, bass boosters, and more.</string>
    <string name="welcome_featurette_automix"><b>Automix:</b> Create automated mixes based on your taste and a few parameters.</string>
    <string name="welcome_featurette_recognition"><b>Recognition:</b> Recognize what you hear or sing, and add it directly in your playlists.</string>
    <string name="welcome_featurette_drivemode"><b>Drive Mode:</b> Enhanced experience when using Encore in your car with gestures and voice control.</string>
    <string name="welcome_featurette_more">And much more!</string>
</resources>