<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_play_now"
        android:title="@string/play_now" />

    <item
        android:id="@+id/menu_play_next"
        android:visible="false"
        android:title="@string/play_next" />

    <item
        android:id="@+id/menu_add_to_queue"
        android:title="@string/add_to_queue" />

    <item
        android:id="@+id/menu_add_to_playlist"
        android:title="@string/add_to_another_playlist" />

    <item
        android:id="@+id/menu_remove_duplicates"
        android:title="@string/menu_remove_duplicates" />

    <item
        android:id="@+id/menu_rename_playlist"
        android:title="@string/rename_playlist" />

    <item
        android:id="@+id/menu_remove_playlist"
        android:title="@string/remove_playlist" />


</menu>