<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/welcome_background">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ivBackground"
        android:src="@drawable/bg_welcome_top"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="0dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ivIllustration"
        android:src="@drawable/welcome_illus_4"
        android:layout_below="@+id/tvTitle"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcome_step4_title"
        android:id="@+id/tvTitle"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/white"
        android:textSize="@dimen/welcome_title_font"
        android:fontFamily="sans-serif-medium"
        android:layout_margin="@dimen/welcome_title_margin"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_finish"
        android:id="@+id/btnNext"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        style="@style/OmniMusic.Spec.BorderlessButton"
        android:textColor="@color/white"
        android:layout_marginRight="@dimen/welcome_button_margin"
        android:layout_marginBottom="@dimen/welcome_button_margin"
        android:textSize="@dimen/welcome_button_font"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_featurette_title"
        android:id="@+id/tvFeaturetteTitle"
        android:layout_alignBottom="@+id/ivBackground"
        android:layout_alignLeft="@+id/tvTitle"
        android:layout_alignStart="@+id/tvTitle"
        android:textColor="@color/white"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_featurette_effects"
        android:id="@+id/tvFeaturette1"
        android:layout_below="@+id/ivBackground"
        android:layout_alignLeft="@+id/tvFeaturetteTitle"
        android:layout_alignStart="@+id/tvFeaturetteTitle"
        android:textColor="@color/white"
        android:layout_marginTop="4dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_featurette_automix"
        android:id="@+id/tvFeaturette2"
        android:layout_below="@+id/tvFeaturette1"
        android:layout_alignLeft="@+id/tvFeaturette1"
        android:layout_alignStart="@+id/tvFeaturette1"
        android:textColor="@color/white"
        android:layout_marginTop="4dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_featurette_recognition"
        android:id="@+id/tvFeaturette3"
        android:textColor="@color/white"
        android:layout_below="@+id/tvFeaturette2"
        android:layout_alignLeft="@+id/tvFeaturette2"
        android:layout_alignStart="@+id/tvFeaturette2"
        android:layout_marginTop="4dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_featurette_drivemode"
        android:id="@+id/tvFeaturette4"
        android:textColor="@color/white"
        android:layout_below="@+id/tvFeaturette3"
        android:layout_alignLeft="@+id/tvFeaturette3"
        android:layout_alignStart="@+id/tvFeaturette3"
        android:layout_marginTop="4dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_featurette_more"
        android:id="@+id/tvFeaturetteMore"
        android:textColor="@color/white"
        android:layout_below="@+id/tvFeaturette4"
        android:layout_alignLeft="@+id/tvFeaturette4"
        android:layout_alignStart="@+id/tvFeaturette4"
        android:layout_marginTop="4dp" />

</RelativeLayout>