<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/welcome_background">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ivBackground"
        android:src="@drawable/bg_welcome_top"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="0dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ivIllustration"
        android:src="@drawable/welcome_illus_1"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcome_step1_title"
        android:id="@+id/tvTitle"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/white"
        android:textSize="@dimen/welcome_title_font"
        android:fontFamily="sans-serif-medium"
        android:layout_margin="@dimen/welcome_title_margin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_step1_body"
        android:id="@+id/tvExplanation"
        android:layout_below="@+id/ivIllustration"
        android:textColor="@color/white"
        android:textSize="@dimen/welcome_body_font"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="@dimen/welcome_body_margin"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:id="@+id/btnNext"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        style="@style/OmniMusic.Spec.BorderlessButton"
        android:textColor="@color/white"
        android:layout_marginRight="@dimen/welcome_button_margin"
        android:layout_marginBottom="@dimen/welcome_button_margin"
        android:textSize="@dimen/welcome_button_font"/>

</RelativeLayout>