<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#dd342d">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ivBackground"
        android:src="@drawable/bg_welcome_top"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="0dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ivIllustration"
        android:src="@drawable/welcome_illus_3"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcome_step3_title"
        android:id="@+id/tvTitle"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/white"
        android:textSize="42sp"
        android:fontFamily="sans-serif-medium"
        android:layout_margin="32dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_step3_body"
        android:id="@+id/tvExplanation"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_alignTop="@+id/ivIllustration"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:id="@+id/btnNext"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        style="@style/OmniMusic.Spec.BorderlessButton"
        android:textColor="@color/white"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp"
        android:textSize="16sp"/>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lvProviders"
        android:layout_below="@+id/tvExplanation"
        android:layout_above="@+id/btnNext"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:divider="@color/white"
        android:dividerHeight="1dp"
        android:layout_marginTop="8dp"/>
</RelativeLayout>